# tps-web

tps/: pyproject.toml
tps/accounts/: urls.py  views.py
tps/accounts/migrations/: 0002_auto_20160723_1028.py
tps/core/: fields.py
tps/problems/: urls.py
tps/problems/migrations/: 0001_initial.py  0003_auto_20160727_2022.py  0004_auto_20160730_0714.py  0005_auto_20160731_2252.py  0006_validatorresult.py  0007_auto_20160822_1614.py  0008_auto_20160824_1429.py  0009_auto_20160828_1128.py  0010_auto_20160830_1033.py  0012_auto_20160912_0934.py  0013_auto_20160914_1741.py  0014_auto_20160922_1846.py  0015_auto_20160922_2005.py  0016_auto_20160922_2209.py  0017_auto_20160924_2153.py  0018_auto_20161002_1418.py  0019_auto_20161003_0803.py  0020_auto_20161003_0818.py  0021_auto_20161005_1056.py  0024_auto_20161011_1828.py  0025_auto_20161011_1840.py  0026_auto_20161025_1519.py  0031_auto_20161029_2108.py  0034_auto_20161108_2010.py  0036_auto_20161109_0419.py  0040_auto_20161123_2106.py  0041_auto_20161123_2148.py  0043_auto_20161126_0645.py  0047_auto_20161128_1812.py  0048_exportpackage_exportpackagecreationtask.py  0051_auto_20161201_1618.py  0051_auto_20161201_1705.py  0052_auto_20161201_2102.py  0056_auto_20161208_0823.py  0056_solutionrun_creator.py  0057_auto_20161204_2149.py  0057_auto_20161208_0825.py  0062_grader.py  0065_auto_20170201_1911.py  0066_auto_20170202_2109.py  (+12 more)
tps/problems/models/: fields.py  problem.py  version_control.py
tps/problems/views/: analysis.py  checker.py  (+18 more)
tps/tasks/: serializers.py  tasks.py
tps/tps/: celery.py  settings.py  urls.py
(+3 files in other folders)
